--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ def ROBOT_MAIN_CLASS = "com.amhsrobotics.tko2019.Robot"
 def includeDesktopSupport = false
 
 group 'com.amhsrobotics'
-version '0.1.2'
+version '0.1.3'
 
 sourceCompatibility = 1.11
 
@@ -22,19 +22,19 @@ repositories {
 
 dependencies {
     //noinspection GroovyAssignabilityCheck
-    compile wpi.deps.wpilib()
+    implementation wpi.deps.wpilib()
     //noinspection GroovyAssignabilityCheck
-    compile wpi.deps.vendor.java()
+    implementation wpi.deps.vendor.java()
     //noinspection GroovyAssignabilityCheck
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
     //noinspection GroovyAssignabilityCheck
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
 
-    compile 'com.ctre.phoenix:wpiapi-java:5.12.0'
-    compile 'com.ctre.phoenix:cci:5.12.0'
-    compile 'com.ctre.phoenix:api-java:5.12.0'
+    implementation 'com.ctre.phoenix:wpiapi-java:5.12.0'
+    implementation 'com.ctre.phoenix:cci:5.12.0'
+    implementation 'com.ctre.phoenix:api-java:5.12.0'
 
-    testCompile 'junit:junit:5.3.2'
+    testImplementation 'junit:junit:5.3.2'
 }
 
 deploy {
