--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     implementation 'com.ctre.phoenix:cci:5.12.0'
     implementation 'com.ctre.phoenix:api-java:5.12.0'
 
-    testImplementation 'junit:junit:5.3.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.2'
 }
 
 deploy {
