--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,10 @@ plugins {
 }
 
 def ROBOT_MAIN_CLASS = "com.amhsrobotics.tko2019.Robot"
-def includeDesktopSupport = true
+def includeDesktopSupport = false
 
 group 'com.amhsrobotics'
-version '0.1.5'
+version '0.1.0'
 
 sourceCompatibility = 1.11
 
@@ -22,19 +22,19 @@ repositories {
 
 dependencies {
     //noinspection GroovyAssignabilityCheck
-    implementation wpi.deps.wpilib()
+    compile wpi.deps.wpilib()
     //noinspection GroovyAssignabilityCheck
-    implementation wpi.deps.vendor.java()
+    compile wpi.deps.vendor.java()
     //noinspection GroovyAssignabilityCheck
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
     //noinspection GroovyAssignabilityCheck
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
 
-    implementation 'com.ctre.phoenix:wpiapi-java:5.12.0'
-    implementation 'com.ctre.phoenix:cci:5.12.0'
-    implementation 'com.ctre.phoenix:api-java:5.12.0'
+    compile 'com.ctre.phoenix:wpiapi-java:5.12.0'
+    compile 'com.ctre.phoenix:cci:5.12.0'
+    compile 'com.ctre.phoenix:api-java:5.12.0'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.2'
+    testCompile 'junit:junit:4.12'
 }
 
 deploy {
@@ -45,13 +45,13 @@ deploy {
     }
     artifacts {
         frcJavaArtifact('frcJava') {
-            //noinspection GroovyAssignabilityCheck
             targets << "roborio"
-            debug = true // TODO Change to 'false' @ Competition
+            debug = frc.getDebugOrDefault(false)
         }
         fileTreeArtifact('frcStaticFileDeploy') {
-            files = fileTree(dir: 'src/main/resources')
-            //noinspection GroovyAssignabilityCheck
+
+            files = fileTree(dir: 'src/main/deploy')
+
             targets << "roborio"
             directory = '/home/lvuser/deploy'
         }
@@ -59,15 +59,7 @@ deploy {
 }
 
 jar {
-    from {
-        configurations.compile.collect {
-            if (it.isDirectory()) {
-                it
-            } else {
-                zipTree(it)
-            }
-        }
-    }
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
     //noinspection GroovyAssignabilityCheck
     manifest GradleRIOPlugin.javaManifest(ROBOT_MAIN_CLASS)
 }
