--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ import edu.wpi.first.gradlerio.GradleRIOPlugin
 
 plugins {
     id 'java'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.21'
     id "edu.wpi.first.GradleRIO" version "2019.2.1"
 }
 
@@ -12,6 +13,10 @@ version '1.0.0'
 
 sourceCompatibility = 1.11
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     //noinspection GroovyAssignabilityCheck
     compile wpi.deps.wpilib()
@@ -21,6 +26,8 @@ dependencies {
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
     //noinspection GroovyAssignabilityCheck
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
+
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
 }
 
 deploy {
@@ -55,4 +62,15 @@ jar {
     }
     //noinspection GroovyAssignabilityCheck
     manifest GradleRIOPlugin.javaManifest(ROBOT_MAIN_CLASS)
+}
+
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.11"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.11"
+    }
 }
